[package]
name = "umu-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
